welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:5: error: identifier expected but integer literal found.
    if (nums[i+1]==u && nums[i+2]==u){
               ^noTriples:11: error: ']' expected but '}' found.
  }
  ^